<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElectricityBillCalculator</string>
    <string name="bill_history">Bill History</string>
    <string name="no_bill_records_found">No bill records found.</string>
    <string name="final_cost">Final Cost:</string>
    <string name="total_charges">Total Charges:</string>
    <string name="rm_0_00">RM 0.00</string>
    <string name="month_january">Month: January</string>
    <string name="about_app">About App</string>
    <string name="view_history">View History</string>
    <string name="electricity_bill_calculator">Electricity Bill Calculator</string>
    <string name="month">Month:</string>
    <string name="units_used_kwh">Units Used (kWh)</string>
    <string name="rebate_percentage">Rebate Percentage:</string>
    <string name="_0">0%</string>
    <string name="_1">1%</string>
    <string name="_2">2%</string>
    <string name="_3">3%</string>
    <string name="_4">4%</string>
    <string name="_5">5%</string>
    <string name="calculate_bill">Calculate Bill</string>
    <string name="electricity_bill_estimator">Electricity Bill Estimator</string>
    <string name="final_cost_after_rebate">Final Cost (After Rebate):</string>
    <string name="bill_details">Bill Details</string>
    <string name="units_used">Units Used:</string>
    <string name="about_this_application">About This Application</string>
    <string name="developer_name_your_full_name">Developer Name: Ahmad Fauzan bin Zainal Abidin</string>
    <string name="student_id_your_student_id">Student ID: 2023131513</string>
    <string name="course_mobile_technology">Course: Mobile Technology and Development</string>
    <string name="_2024_electricity_bill_calculator_all_rights_reserved">© 2024 Electricity Bill Calculator. All rights reserved.</string>
    <string name="application_website">Application Website:</string>
    <string name="https_github_com_jeyy2002_electricitybillcalculator">https://github.com/Jeyy2002/ElectricityBillsCalculator-Android#</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>